# compiler

./: .eslintrc  .gitignore  Cargo.toml  ChangeLog.md  LICENSE  README.md  example.css  example.glz  glaze.cabal  package.json
benches/: benchmark.rs
example/: .glazerc  glaze.config.js
example/ui/: style.glz
lib/: compile.js  config.js  index.js  init.js
native/: Cargo.toml  build.rs
native/benches/: benchmark.rs  test.glz
native/src/: generator.rs  lexer.rs  lib.rs  nodes.rs  parser.rs  syntax.pest  tests.rs  tokenizer.rs
native/src/tests/: mod.rs
native/src/tests/array/: style.glz
native/src/tests/mixins/: style.css  style.glz
native/src/tests/nesting/: style.css
native/src/tests/object/: style.glz
native/src/tests/value/: style.css
native/src/tests/variables/: style.css  style.glz
native/tests/array/: style.css
native/tests/for_loop/: style.css  style.glz
native/tests/function/: style.css  style.glz
native/tests/if_statement/: style.css  style.glz
native/tests/nesting/: style.glz
native/tests/operation/: style.css  style.glz
native/tests/variables/: style.css
prototype-2/: .gitignore  ChangeLog.md  README.md  example.glz  glaze.cabal
prototype-2/spec/: CONTROL FLOW.md  EXTERNAL CSS.md  SELECTORS.md
prototype-2/src/: Glaze.hs
prototype-2/src/Glaze/: AST.hs  Compiler.hs  Generator.hs  Parser.hs  Util.hs
prototype/lib/: add.js  compile.js  config.js  index.js
prototype/native/: build.rs
prototype/native/benches/: benchmark.rs
prototype/scripts/: add_test.js
spec/: CLI.md  CONFIG.md  FUNCTIONS AND MIXINS.md  REACTIVE.md  STANDARD.md  TYPES.md
src/: Glaze.hs  ast.rs  error.rs  generator.rs  lib.rs  main.rs
src/Glaze/: AST.hs  Compiler.hs  Generator.hs  Parser.hs
src/parser/: lexer.rs  mod.rs
template/: .glazerc  glaze.config.js
(+7 files in other folders)
