name:                glaze
version:             0.1.0
synopsis:            A functional reactive UI language for the web
homepage:            https://glaze.dev
license:             BSD3
license-file:        LICENSE
author:              GiraffeKey
maintainer:          giraffekey@tutanota.com
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable glaze
  main-is:             Glaze.hs
  other-modules:       Glaze.AST
                     , Glaze.Parser
  build-depends:       base >=4.11 && <4.12
                     , base-compat
                     , parsec >=3.0
                     , parsec3-numbers
  hs-source-dirs:      src
  default-language:    Haskell2010
