[package]
name = "glaze"
version = "0.1.0"
authors = ["GiraffeKey <giraffekey@tutanota.com>"]
license = "GPL-3.0"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "glaze"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
pest = "2.0"
pest_derive = "2.0"
cow-rc-str = "0.1.0"
