[package]
name = "glaze"
version = "0.1.0"
authors = ["GiraffeKey <giraffekey@tutanota.com>"]
license = "GPL-3.0"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "glaze"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = { version = "0.4.0", optional = true }
pest = "2.0"
pest_derive = "2.0"
rayon = "1.1"

[features]
default = ["neon"]
bench = []

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
required-features = ["bench"]
